# codex-dreams

./: .env.backup-before-init  .env.example  .env.test  .env.testing  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BACKLOG.md  BIOLOGICAL_SCHEMA_INSIGHTS.md  CLAUDE.md  CODEBASE_LEARNINGS.md  CODEBASE_LEARNINGS_COMPREHENSIVE.md  CODEX_MEMORY_BMP003.md  CODEX_MEMORY_BMP004.md  CODEX_MEMORY_BMP005.md  CODEX_MEMORY_BMP009.md  CODEX_MEMORY_BMP010.md  HEBBIAN_LEARNING_INSIGHTS.md  INTEGRATION_TESTING_INSIGHTS.md  LLM_INTEGRATION_INSIGHTS.md  MEMORY_CURATOR_INSIGHTS_2025-09-06.md  Makefile  README.md  REVIEW.md  SYNAPTIC_MECHANISMS_INSIGHTS.md  SYSTEM_STATUS_REPORT.md  TEST_ARCHITECTURE_REFACTORING_INSIGHTS.md  TEST_DIRECTORY_ANALYSIS.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_SUMMARY.md  VECTOR_OPTIMIZATION_INSIGHTS.md  WRITE_BACK_MECHANISM_INSIGHTS.md  dbt_project.yml  generate_insights.py  models_bio  monitor_commits.sh  profiles.yml  (+14 more)
.claude/: path_management_patterns.md  settings.local.json  sql_compatibility_insights.md
.claude/agents/: biological-orchestrator.md  code-quality-guardian.md  cognitive-memory-researcher.md  dbt-configuration-specialist.md  dbt-sql-expert.md  duckdb-dbt-expert.md  error-handling-engineer.md  integration-testing-specialist.md  lead-architect.md  memory-curator.md  ml-ops-expert.md  postgres-sql-expert.md  postgres-vector-optimizer.md  rust-engineering-expert.md  rust-mcp-developer.md  supervisor-oracle.md
.claude/memories/: test_suite_progress_milestone_2025-09-06.md
.github/workflows/: integration-tests.yml  test-suite.yml
analysis_reports/: DEEP_ANALYSIS_REPORT.md  JIRA_STORIES.md  comprehensive_documentation_validation_report.md  findings_architecture_auditor.md  findings_consistency_inspector.md  findings_documentation_validator.md  findings_integration_analyst.md
biological_memory/: .env.example  .user.yml  BACKLOG.md  BMP-008_SELF_REVIEW.md  BMP-012_SELF_REVIEW.md  BMP-013_SECURITY_REVIEW.md  BMP-HIGH-007_SELF_REVIEW.md  BMP_HIGH_005_IMPLEMENTATION_LEARNINGS.md  BMP_HIGH_005_SELF_REVIEW.md  BMP_MEDIUM_009_PERFORMANCE_REVIEW.md  CODEX_DB_MEMORIES_INTEGRATION.md  CODEX_MEMORY_AUDIT-005.md  CODEX_MEMORY_BMP-008.md  CODEX_MEMORY_BMP-013.md  CODEX_MEMORY_BMP-EMERGENCY-001.md  CODEX_MEMORY_BMP-MEDIUM-010.md  EPIC_3_COMPLETE.md  README.md  STORY-DB-002_SELF_REVIEW.md  STORY_CS_001_SECURITY_PATTERNS.md  STORY_CS_003_TEST_FIXING_PATTERNS.md  STORY_CS_004_SELF_REVIEW.md  STORY_DB_001_COMPLETION_LEARNINGS.md  STORY_DB_001_SELF_REVIEW.md  STORY_DB_003_SELF_REVIEW.md  STORY_DB_006_REFACTORING_PATTERNS.md  STORY_DB_007_SELF_REVIEW.md  TEST_COMPLETION_REPORT.md  TIMING_PATTERNS_DOCUMENTATION.md  automated_recovery_service.py  biological_memory_crontab.txt  connection_pool_config.sql  dbt_project.yml  duckdb_performance_config.sql  error_handling.py  health_check_service.py  json  llm_integration_service.py  logrotate.conf  manage_orchestrator.sh  (+15 more)
biological_memory/docs/: CODEX_MEMORY_BMP-012.md  CODEX_MEMORY_STORY_DB_003.md  analytics_dashboard_patterns.md  parameter_management_patterns.md  postgres_scanner_extension_patterns.md
biological_memory/macros/: batch_embedding_generator.py  biological_helpers.sql  biological_memory_macros.sql  biological_memory_utils.sql  biological_parameter_monitoring.sql  connection_helpers.sql  cortical_architecture_macros.sql  ollama_embeddings.py  ollama_integration.sql  utility_macros.sql  (+6 more)
codex_memory/: chronobiology_insights_20250901.md
dags/: biological_rhythms.py
docs/: BACKLOG_NEW_STORIES.md  CRITICAL_FINDINGS_ROUND_4.md  DAEMON_README.md  DATA_MODEL_ERD.md  DREAMS_SCHEMA.md  FINAL_README_VERIFICATION.md  SCHEMA_ARCHITECTURE.md  TAG_EMBEDDINGS.md  TAG_EMBEDDINGS_DEPLOYMENT.md  team_chat.md
macros/: biological_helpers.sql
memory_insights/: neuroscience_validation_insights_2025-09-01.md
models/: schema.yml
scripts/: dbt_post_hook_writeback.sh  query_memories.py  setup_test_data.sql  setup_test_duckdb.py
sql/: README.md  create_biological_memory_schema.sql  create_codex_processed_schema.sql  create_dreams_schema.sql  duckdb_connection_manager.sql  duckdb_functions.sql  postgres_connection_setup.sql  postgresql_vector_optimization.sql  setup_duckdb.sql  test_postgres_connection.sql
src/: codex_cli.py  codex_config.py  codex_config_editor.py  codex_env.py  codex_scheduler.py  codex_service.py  generate_insights.py  reset_insights.py
tests/: __init__.py  conftest.py  edge_cases_test.py  integration_pipeline_test.py  run_env_tests.py  suite_validation_test.py  test_edge_cases.py  test_generate_insights.py  test_helpers.py  test_integration_pipeline.py  test_run_env.py  test_suite_validation.py
(+262 files in other folders)
