[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-dreams"
version = "0.2.0"
description = "Biologically-inspired memory management system with Ollama integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ladvien"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "dbt-core>=1.10.0",
    "dbt-duckdb>=1.9.0",
    "dbt-postgres>=1.9.0",
    "psycopg2-binary>=2.9.0",
    "duckdb>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-mock>=3.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
codex-dreams = "src.codex_cli:main"
cdx = "src.codex_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "biological_memory*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true